methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:6: error: not found: type Colors
def flower(c:Colors){
             ^FlowerPot:7: error: not found: value marque
  marque(jaune)
  ^FlowerPot:10: error: not found: value marque
    marque(c)
    ^FlowerPot:27: error: not found: value setPosition
  setPosition(3,3)
  ^